# iMessage_MCPServer_AdvancedInsights

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_INTEGRATION.md  CODE_OF_CONDUCT.md  CONTACT_RESOLVER_IMPROVEMENTS.md  DATABASE_OPTIMIZATION.md  ENHANCED_SENTIMENT_INSIGHTS.md  LICENSE  MCP_TOOLS_QUICK_REFERENCE.md  PERFORMANCE_OPTIMIZATIONS.md  PRIVACY_SECURITY.md  README.md  SECURITY.md  SENTIMENT_ANALYSIS_IMPROVEMENTS.md  SETUP_GUIDE.md  config.sample.json  database_benchmark.py  generate_claude_config.py  install_and_optimize.py  main_async.py  mcp_server_modular.py  public_repo_cleanup.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_mcp.txt  run_tests.sh  setup.py  start_mcp_server.sh  start_server.sh  test_contact_resolver.py  test_enhanced_sentiment.py
.claude/agents/: code-reviewer-nlp.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
OLD/: ASYNC_MCP_README.md  flask_app.py  iMessage_AdvancedInsights_MCP.py  iMessage_AsyncInsights_MCP.py  main.py  minimal_app.py  quart_app.py  run_server.py  run_with_hypercorn.py  simple_app.py  test_quart.py
OLD/src/: app.py
archive/: README.md  repository_inventory.json
archive/deprecated_src/: server.py
archive/deprecated_src/src/database/: __init__.py  async_messages_db_implementations.py  async_messages_db_new.py  db_base.py  db_factory.py  db_utils.py  get_database.py  large_db_handler.py  sharded_async_messages_db.py
archive/deprecated_src/src/exceptions/: __init__.py
archive/deprecated_src/src/mcp_tools/: __init__.py  attachments.py  communication_style.py  consent.py  contacts.py  conversation_intelligence.py  emoji_analysis.py  group_chats.py  life_events.py  messages.py  (+9 more)
archive/deprecated_src/tools/: __init__.py  analytics.py  health.py  messages.py  network.py  overview.py  predictions.py
archive/old_docs/: README_MCP.md
archive/old_main_versions/: main_complete.py  main_old.py  main_refactored.py
docs/: CLAUDE_DESKTOP_INTEGRATION.md  CLAUDE_DESKTOP_TESTING.md  CLAUDE_INTERACTION_EXAMPLES.md  CLOUD_AWARE_TOOLS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  ENHANCED_INSIGHTS_IDEAS.md  LARGE_DATABASE_GUIDE.md  LLM_INTEGRATION.md  MCP_TOOLS_GUIDE.md  MCP_TOOLS_REFERENCE.md  PRIORITY_IMPLEMENTATION_PLAN.md  TOOLS_AUDIT_ENHANCEMENTS.md  TROUBLESHOOTING.md  USER_GUIDE.md  db_implementation_sample.py  documentation_analysis.md
docs/audits/: AUDIT_REPORT.md  AUDIT_SUMMARY.md  AUDIT_VALIDATION_FINAL.md  AUDIT_VALIDATION_REPORT.md  CLEANUP_COMPLETE.md  ENRICHMENTS_SUMMARY.md  ENRICHMENT_QUICK_WINS.md  FEATURE_AUDIT_REPORT.md  FINAL_AUDIT_COMPLETE.md  FINAL_AUDIT_REPORT.md  FINAL_POLISH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  NEW_TOOLS_IMPLEMENTATION_SPEC.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_READY.md  SECURITY_REVIEW.md
examples/: claude_desktop_config.json
scripts/: add_performance_indexes.py  basic_performance_test.py  benchmark_mcp.py  check_database_permissions.py  database_benchmark.py  generate_example_visualizations.py  generate_synthetic_data.py  generate_visualizations.py  index_imessage_db.py  install_and_optimize.py  install_mcp.py  performance_testing.py  shard_dashboard.py  shard_large_database.py  update_claude_config.py
src/: app_async.py
src/analysis/: __init__.py  async_network_analysis.py  async_sentiment_analysis.py  contextual_sentiment.py  emotion_detection.py  network_analysis.py  sentiment_analysis.py
src/database/: __init__.py  async_messages_db.py  db_indexes.sql  messages_db.py
src/database/modules/: base.py
src/imessage_mcp_server/: __init__.py  config.py  consent.py  db.py  main.py  models.py  privacy.py
src/imessage_mcp_server/tools/: __init__.py  analytics.py  base.py  cloud_aware.py  communication.py  communication_enhanced.py  comparison.py  consent.py  contacts.py  group_dynamics.py  health.py  ml_tools.py  overview.py  predictive_engagement.py  quality.py  relationship.py  utils.py
src/utils/: __init__.py  async_query_processor.py  contact_resolver.py  db_indexer.py  helpers.py  redis_cache.py
src/visualization/: __init__.py  async_network_viz.py  network_viz.py
tests/: conftest.py  test_analytics_tools.py  test_cloud_aware_tools.py  test_communication_enhanced_tools.py  test_communication_tools.py  test_comparison_tools.py  test_core_functionality.py  test_group_dynamics_tools.py  test_integration.py  test_mcp_server.py  test_predictive_engagement_tools.py  test_quality_tools.py  test_server_integration.py
(+18 files in other folders)
